# monad-logger-truncated

./: .travis.yml  LICENSE  README.md  monad-logger-truncated.cabal  stack.yaml
Control/Monad/Logger/: Truncated.hs
System/Log/MonadLogger/: Truncated.hs
